--- a/Bear Photo Classifier.ipynb
+++ b/Bear Photo Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,7 @@
     "from keras.preprocessing import image\n",
     "from keras.models import save_model, load_model\n",
     "from keras import utils\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, confusion_matrix\n",
-    "\n",
+    "from sklearn import metrics\n",
     "import numpy as np\n",
     "import math\n",
     "import cv2\n",
@@ -254,42 +253,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('71172095554.jpg', array([7.8517795e-01, 2.1482202e-01, 1.8443083e-10], dtype=float32))\n"
+      "Example classifier output:\n",
+      "('48177762150.jpg', array([5.8558178e-01, 4.1409665e-01, 3.2154837e-04], dtype=float32))\n"
      ]
     }
    ],
    "source": [
-    "## EVALUATING THE MODEL\n",
+    "## CLASSIFYING THE TEST DATA\n",
     "\n",
     "## Predicting the test image sets\n",
     "bear_test_predictions = classify_directory(\"Bear_Test\")\n",
     "not_bear_test_predictions = classify_directory(\"Not_Bear_Test\")\n",
     "\n",
     "## Printing classifier output for a random image\n",
+    "print(\"Example classifier output:\")\n",
     "print(random.choice(bear_test_predictions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "## Create a combined list of true labels for the test set\n",
     "\n",
     "y_true = [0]*len(bear_test_predictions) + [1]*len(not_bear_test_predictions)\n",
     "\n",
+    "\n",
     "## Create a combined list of predictions\n",
+    "\n",
     "y_predictions = []\n",
     "\n",
     "for pair in bear_test_predictions:\n",
@@ -305,68 +305,64 @@
     "    if prediction_array[1] > 0.5:\n",
     "        y_predictions.append(0)\n",
     "    else:\n",
-    "        y_predictions.append(1)"
+    "        y_predictions.append(1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6811594202898551\n",
+      "Accuracy score: 0.68\n",
+      "\n",
+      "Precision score: 0.79\n",
+      "\n",
+      "Recall score: 0.33\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[75  5]\n",
-      " [39 19]]\n",
-      "\n",
-      "key:\n",
-      "true positive   false positive\n",
-      "false negative  true negative\n",
-      "\n",
-      "Precision: 0.7916666666666666\n",
-      "\n",
-      "Recall: 0.3275862068965517\n"
+      "  true positive: 75   false positive: 5\n",
+      "  false negative: 39  true negative\": 19\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "## EVALUATING CNN MODEL PERFORMANCE\n",
     "\n",
-    "## MEASURING CLASSIFIER MODEL PERFORMANCE\n",
-    "\n",
-    "## Calculate accuracy score and confusion matrix\n",
-    "\n",
-    "accuracy = accuracy_score(y_true, y_predictions)\n",
-    "print(f\"Accuracy: {accuracy}\")\n",
+    "## Print accuracy score\n",
+    "accuracy = metrics.accuracy_score(y_true, y_predictions)\n",
+    "accuracy = round(accuracy, 2)\n",
+    "print(f\"Accuracy score: {accuracy}\")\n",
     "print()\n",
     "\n",
-    "\n",
-    "print(\"Confusion Matrix:\")\n",
-    "\n",
-    "confusion_matrix_results = confusion_matrix(y_true, y_predictions)\n",
-    "print(confusion_matrix_results)\n",
-    "print()\n",
-    "confusion_matrix_key = \"key:\\ntrue positive   false positive\\nfalse negative  true negative\"\n",
-    "print(confusion_matrix_key)\n",
+    "## Print precision score\n",
+    "precision = metrics.precision_score(y_true, y_predictions, average='binary')\n",
+    "precision = round(precision, 2)\n",
+    "print(f\"Precision score: {precision}\")\n",
     "print()\n",
     "\n",
-    "\n",
-    "## Printing precision and recall scores\n",
-    "\n",
-    "precision = precision_score(y_true, y_predictions, average='binary')\n",
-    "print(f\"Precision: {precision}\")\n",
-    "print()\n",
-    "\n",
+    "## Print recall score\n",
     "recall = recall_score(y_true, y_predictions, average='binary')\n",
-    "print(f\"Recall: {recall}\")"
+    "recall = round(recall, 2)\n",
+    "print(f\"Recall score: {recall}\")\n",
+    "print()\n",
+    "\n",
+    "## Print confusion matrix\n",
+    "confusion_matrix = metrics.confusion_matrix(y_true, y_predictions)\n",
+    "confusion_matrix_output = f'''Confusion Matrix:\n",
+    "  true positive: {confusion_matrix[0][0]}   false positive: {confusion_matrix[0][1]}\n",
+    "  false negative: {confusion_matrix[1][0]}  true negative\": {confusion_matrix[1][1]}'''\n",
+    "print(confusion_matrix_output)\n",
+    "print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,10 +433,11 @@
     }
    ],
    "source": [
+    "## VIEWING CLASSIFICATION EXAMPLES AT RANDOM\n",
+    "\n",
     "from IPython.display import Image\n",
     "\n",
-    "## Viewing classification examples at random\n",
-    "\n",
+    "## Output prediction for random image\n",
     "random_prediction = random.choice(bear_predictions)\n",
     "prediction_values = random_prediction[1][:2]\n",
     "print(\"Prediction_values:\")\n",
@@ -451,6 +448,7 @@
     "else:\n",
     "    print(\"The classifier thinks this is *not* a bear.\")\n",
     "\n",
+    "## View image\n",
     "image_path = directory_to_classify + \"/\" + random_prediction[0]\n",
     "Image(filename=image_path) "
    ]
@@ -483,10 +481,7 @@
     }
    ],
    "source": [
-    "\n",
-    "from IPython.display import Image\n",
-    "\n",
-    "\n",
+    "## Output prediction for random image\n",
     "random_prediction = random.choice(bear_predictions)\n",
     "prediction_values = random_prediction[1][:2]\n",
     "print(\"Prediction_values:\")\n",
@@ -497,6 +492,7 @@
     "else:\n",
     "    print(\"The classifier thinks this is *not* a bear.\")\n",
     "\n",
+    "## View image\n",
     "image_path = directory_to_classify + \"/\" + random_prediction[0]\n",
     "Image(filename=image_path) "
    ]
@@ -529,10 +525,7 @@
     }
    ],
    "source": [
-    "\n",
-    "from IPython.display import Image\n",
-    "\n",
-    "\n",
+    "## Output prediction for random image\n",
     "random_prediction = random.choice(bear_predictions)\n",
     "prediction_values = random_prediction[1][:2]\n",
     "print(\"Prediction_values:\")\n",
@@ -546,13 +539,6 @@
     "image_path = directory_to_classify + \"/\" + random_prediction[0]\n",
     "Image(filename=image_path) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
