--- a/Bear Photo Classifier.ipynb
+++ b/Bear Photo Classifier.ipynb
@@ -24,9 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## EXTRACT FEATURES\n",
+    "## EXTRACTING IMAGE FEATURES\n",
     "\n",
-    "## Creating a function to extract features from each image in a directory\n",
+    "## Create a function to extract features from each image in a directory\n",
     "\n",
     "def load_directory(directory_name):\n",
     "    image_feature_list = []\n",
@@ -110,14 +110,14 @@
     }
    ],
    "source": [
-    "## TRAIN OR LOAD CLASSIFIER MODEL\n",
+    "## TRAINING/LOADING CLASSIFIER MODEL\n",
     "\n",
-    "## Asking whether the user wants to train a new model\n",
+    "## Ask whether the user wants to train a new model\n",
     "user_input = input(\"Do you want to train a new CNN model? \")\n",
     "\n",
     "\n",
     "if user_input in [\"y\", \"yes\"]:\n",
-    "    ## Importing modules here to save time when loading a saved model\n",
+    "    ## Import modules here to save time when loading a saved model\n",
     "    from keras.models import Sequential\n",
     "    from keras.layers import Conv2D, MaxPooling2D, GlobalAveragePooling2D\n",
     "    from keras.layers import Dropout, Flatten, Dense\n",
@@ -147,7 +147,6 @@
     "    model.add(Dense(512, activation='relu'))\n",
     "    model.add(Dropout(0.4))\n",
     "    model.add(Dense(3,activation='softmax')) ## Including the number of classes + 1\n",
-    "    model.summary()\n",
     "\n",
     "    ## Compiling the model\n",
     "    model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])\n",
@@ -214,7 +213,7 @@
     }
    ],
    "source": [
-    "## Printing model summary\n",
+    "## Print model summary\n",
     "\n",
     "model.summary()"
    ]
@@ -225,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## CREATING A FUNCTION TO CLASSIFY AN IMAGE DIRECTORY\n",
+    "## DEFINING A FUNCTION TO CLASSIFY AN IMAGE DIRECTORY\n",
     "\n",
     "def classify_directory(image_directory):\n",
     "    photos_to_classify = []\n",
@@ -268,11 +267,11 @@
    "source": [
     "## CLASSIFYING THE TEST DATA\n",
     "\n",
-    "## Predicting the test image sets\n",
+    "## Predict the test image sets\n",
     "bear_test_predictions = classify_directory(\"Bear_Test\")\n",
     "not_bear_test_predictions = classify_directory(\"Not_Bear_Test\")\n",
     "\n",
-    "## Printing classifier output for a random image\n",
+    "## Print classifier output for a random image\n",
     "print(\"Example classifier output:\")\n",
     "print(random.choice(bear_test_predictions))"
    ]
@@ -368,7 +367,7 @@
    "source": [
     "## APPLYING THE MODEL TO UNKNOWN DATA\n",
     "\n",
-    "## Converting a video file to a series of JPEG images\n",
+    "## Convert a video file to a series of JPEG images\n",
     "\n",
     "os.chdir(\"Alaska_Trail_Cam\")\n",
     "videoFile = \"Alaska Trail Cam Video. August 16, 2020.mp4\"\n",
@@ -397,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Classifying each image in the unknown dataset\n",
+    "## Classify each image in the unknown dataset\n",
     "\n",
     "directory_to_classify = \"Alaska_Trail_Cam\"\n",
     "bear_predictions = classify_directory(directory_to_classify)"
