--- a/Bear Photo Classifier.ipynb
+++ b/Bear Photo Classifier.ipynb
@@ -55,42 +55,6 @@
      "output_type": "stream",
      "text": [
       "Do you want to train a new CNN model? y\n",
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d (Conv2D)              (None, 224, 224, 16)      208       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 112, 112, 16)      0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 112, 112, 32)      2080      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 56, 56, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 56, 56, 64)        8256      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 28, 28, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 28, 28, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 28, 28, 128)       32896     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 14, 14, 128)       0         \n",
-      "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 14, 14, 128)       0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 25088)             0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 512)               12845568  \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 3)                 1539      \n",
-      "=================================================================\n",
-      "Total params: 12,890,547\n",
-      "Trainable params: 12,890,547\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
       "Epoch 1/15\n",
       "Epoch 2/15\n",
       "Epoch 3/15\n",
@@ -224,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## DEFINING A FUNCTION TO CLASSIFY AN IMAGE DIRECTORY\n",
+    "## DEFINING A FUNCTION TO CLASSIFY EACH IMAGE IN A DIRECTORY\n",
     "\n",
     "def classify_directory(image_directory):\n",
     "    photos_to_classify = []\n",
@@ -242,7 +206,7 @@
     "\n",
     "\n",
     "    photos_to_classify = np.array(photos_to_classify)\n",
-    "\n",
+    "    \n",
     "    predictions = model.predict(photos_to_classify)\n",
     "    \n",
     "    file_predictions = list(zip(image_filenames, predictions))\n",
