--- a/Bear Photo Classifier.ipynb
+++ b/Bear Photo Classifier.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "    ## Creating combined feature lists\n",
     "    X = np.array(bear_features + not_bear_features)\n",
-    "    y = np.array([0]*len(bear_features) + [1]*len(not_bear_features))\n",
+    "    y = np.array([0]*len(bear_features) + [1]*len(not_bear_features)) # 0 represents 'bear' and 1 represents 'not bear'\n",
     "    y = utils.to_categorical(y, 3)\n",
     "\n",
     "    # Creating a convolutional neural network\n",
@@ -247,28 +247,27 @@
    "outputs": [],
    "source": [
     "## Create a combined list of true labels for the test set\n",
+    "y_true = [0]*len(bear_test_predictions) + [1]*len(not_bear_test_predictions) # 0 represents 'bear' and 1 represents 'not bear'\n",
     "\n",
-    "y_true = [0]*len(bear_test_predictions) + [1]*len(not_bear_test_predictions)\n",
     "\n",
-    "\n",
-    "## Create a combined list of predictions\n",
-    "\n",
+    "## Create a combined list of predictions for the test set\n",
     "y_predictions = []\n",
     "\n",
     "for pair in bear_test_predictions:\n",
     "    prediction_array = pair[1]\n",
+    "    ## If the 'bear' prediction value is > 0.5, add a 0 to the prediction list to represent 'bear'. Otherwise 'not bear'\n",
     "    if prediction_array[0] > 0.5:\n",
     "        y_predictions.append(0)\n",
     "    else:\n",
     "        y_predictions.append(1)\n",
-    "        \n",
-    "        \n",
+    "\n",
     "for pair in not_bear_test_predictions:\n",
     "    prediction_array = pair[1]\n",
+    "    ## If the 'not bear' prediction value is > 0.5, add a 1 to the prediction list to represent 'not bear'. Otherwise 'not bear'\n",
     "    if prediction_array[1] > 0.5:\n",
-    "        y_predictions.append(0)\n",
+    "        y_predictions.append(1)\n",
     "    else:\n",
-    "        y_predictions.append(1)\n"
+    "        y_predictions.append(0)"
    ]
   },
   {
