--- a/Bear Photo Classifier.ipynb
+++ b/Bear Photo Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,22 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Do you want to train a new CNN model? y\n",
-      "Epoch 1/15\n",
-      "Epoch 2/15\n",
-      "Epoch 3/15\n",
-      "Epoch 4/15\n",
-      "Epoch 5/15\n",
-      "Epoch 6/15\n",
-      "Epoch 7/15\n",
-      "Epoch 8/15\n",
-      "Epoch 9/15\n",
-      "Epoch 10/15\n",
-      "Epoch 11/15\n",
-      "Epoch 12/15\n",
-      "Epoch 13/15\n",
-      "Epoch 14/15\n",
-      "Epoch 15/15\n"
+      "Do you want to train a new CNN model? \n"
      ]
     }
    ],
@@ -216,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +209,7 @@
      "output_type": "stream",
      "text": [
       "Example classifier output:\n",
-      "('48177762150.jpg', array([5.8558178e-01, 4.1409665e-01, 3.2154837e-04], dtype=float32))\n"
+      "('41761988975.jpg', array([7.3209190e-01, 2.6790491e-01, 3.1018517e-06], dtype=float32))\n"
      ]
     }
    ],
@@ -242,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,16 +238,14 @@
     "## Create a combined list of predictions for the test set\n",
     "y_predictions = []\n",
     "\n",
-    "for pair in bear_test_predictions:\n",
-    "    prediction_array = pair[1]\n",
+    "for filename, prediction_array in bear_test_predictions:\n",
     "    ## If the 'bear' prediction value is > 0.5, add a 0 to the prediction list to represent 'bear'. Otherwise 'not bear'\n",
     "    if prediction_array[0] > 0.5:\n",
     "        y_predictions.append(0)\n",
     "    else:\n",
     "        y_predictions.append(1)\n",
     "\n",
-    "for pair in not_bear_test_predictions:\n",
-    "    prediction_array = pair[1]\n",
+    "for filename, prediction_array in not_bear_test_predictions:\n",
     "    ## If the 'not bear' prediction value is > 0.5, add a 1 to the prediction list to represent 'not bear'. Otherwise 'not bear'\n",
     "    if prediction_array[1] > 0.5:\n",
     "        y_predictions.append(1)\n",
@@ -272,22 +255,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score: 0.68\n",
+      "Accuracy score: 0.83\n",
       "\n",
-      "Precision score: 0.79\n",
+      "Precision score: 0.89\n",
       "\n",
-      "Recall score: 0.33\n",
+      "Recall score: 0.67\n",
       "\n",
       "Confusion Matrix:\n",
       "  true positive: 75   false positive: 5\n",
-      "  false negative: 39  true negative\": 19\n",
+      "  false negative: 19  true negative\": 39\n",
       "\n"
      ]
     }
@@ -308,7 +291,7 @@
     "print()\n",
     "\n",
     "## Print recall score\n",
-    "recall = recall_score(y_true, y_predictions, average='binary')\n",
+    "recall = metrics.recall_score(y_true, y_predictions, average='binary')\n",
     "recall = round(recall, 2)\n",
     "print(f\"Recall score: {recall}\")\n",
     "print()\n",
