--- a/Bear Photo Classifier.ipynb
+++ b/Bear Photo Classifier.ipynb
@@ -15,7 +15,7 @@
     "import numpy as np\n",
     "import math\n",
     "import cv2\n",
-    "import random\n"
+    "import random"
    ]
   },
   {
@@ -26,22 +26,25 @@
    "source": [
     "## EXTRACTING IMAGE FEATURES\n",
     "\n",
-    "## Create a function to extract features from each image in a directory\n",
+    "## Define a function to extract features from each image in a directory\n",
     "\n",
-    "def load_directory(directory_name):\n",
+    "def load_directory(directory_path):\n",
+    "    ## Create a list of filenames in the target directory\n",
+    "    filenames = [item for item in os.listdir(directory_path) if item.lower().endswith(\".jpg\")]\n",
+    "    \n",
+    "    ## Initialize list of photo features\n",
     "    image_feature_list = []\n",
-    "    filenames = [item for item in os.listdir(directory_name) if item.lower().endswith(\".jpg\")]\n",
-    "    random.shuffle(filenames)\n",
+    "\n",
+    "    ## Add each image's features to the feature list\n",
     "    for filename in filenames:\n",
     "        file_path = directory_name + \"/\" + filename\n",
-    "        \n",
+    "        ## Load image \n",
     "        image_object = image.load_img(file_path, grayscale=False, color_mode=\"rgb\", target_size=(224,224), interpolation=\"nearest\")\n",
-    "\n",
+    "        ## Convert image to numpy array\n",
     "        image_array = image.img_to_array(image_object, data_format=None, dtype=None)\n",
-    "\n",
+    "        ## Add to feature list\n",
     "        image_feature_list.append(image_array)\n",
-    "\n",
-    "    time.sleep(0.7)\n",
+    "        \n",
     "    return image_feature_list"
    ]
   },
